Fix block content sizing (#280)
Make the block content sizing update once when its node moves or becomes
magnified. By manually updating this inner sizing rather than letting
the block flow in the DOM, the animations of the block frames are much
smoother.

This also fixes an issue where two scrollbars were being rendered for
the Directory Preview widget.

This also sets zero padding on nodes when there's only a single node
being rendered.

--- a/frontend/app/tab/tabcontent.less
+++ b/frontend/app/tab/tabcontent.less
@@ -11,7 +11,7 @@
     justify-content: center;
     overflow: hidden;
     position: relative;
-    padding: 3px 3px 3px 0;
+    padding-right: 3px;
 
     .block-container {
         display: flex;
